--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "material-design-icons": "^3.0.1",
     "vue": "^2.5.2",
     "vuedraggable": "^2.17.0",
     "vuex": "^3.0.1",
